k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dojo-k8s
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dojo-k8s
  template:
    metadata:
      labels:
        app: dojo-k8s
    spec:
      containers:
      - name: dojo-k8s
        image: dojok8s:2.0.0
        imagePullPolicy: IfNotPresent
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
