k8s/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: dojo-k8s
spec:
  type: ClusterIP
  selector:
    app: dojo-k8s
  ports:
  - port: 80
    targetPort: 80
