k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dojo-k8s-ingress
  labels:
    name: dojo-k8s-ingress
spec:
  rules:
  - host: dojo-k8s.com.br
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: dojo-k8s
            port: 
              number: 8081
